[project]
name = "carabiner-tools"
version = "0.0.1.post2"
authors = [
  { name="Eachan Johnson", email="eachan.johnson@crick.ac.uk" },
]
description = "Useful utilities."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["bioinformatics", "machine-learning", "data"]

classifiers = [  
  
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ 
  "tqdm"
]

[project.optional-dependencies]

deep = ["tensorflow"]
mpl = ["matplotlib"]
pd = ["pandas"]
all = ["carabiner-tools[deep,mpl,pd]"]


[project.urls]
"Homepage" = "https://github.com/scbirlab/carabiner"
"Bug Tracker" = "https://github.com/scbirlab/carabiner/issues"

[project.scripts] 
carabiner = "carabiner.cli:main"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = {"ogilo" = ["*.csv"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
